# autonomous-agent-stack

./: README.md  pyproject.toml
.github/workflows/: ci.yml
agent_stack/: __init__.py  __main__.py  cli.py
agent_stack/core/: __init__.py  agent.py  context.py  orchestrator.py
agent_stack/modules/: __init__.py  security_agents.py  task_delegator.py
agent_stack/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_agent.py  test_context.py  test_modules.py  test_orchestrator.py
