[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-agent-stack"
version = "1.0.0"
description = "Multi-agent orchestration framework for parallel security operations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "NEXUS", email = "dev@nexus-system.io"},
]
keywords = ["ai", "agents", "orchestration", "security", "multi-agent", "parallel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
nexus-agent = "agent_stack.cli:main"

[project.urls]
Homepage = "https://github.com/skappafrost/autonomous-agent-stack"
Repository = "https://github.com/skappafrost/autonomous-agent-stack.git"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
